fix: order-sensitivity hardening + the bistability investigation record
The composed dogfood is NOT deterministic: at 12a84540 it flips between 24 surviving
eventual verdicts (the ratchet baseline; the statement family forms) and 10 (it never
forms), roughly 50/50 across identical single-threaded runs. The full experiment
record — what was exonerated (threads, gradle, the ImmutableCollections salt by probe
correlation, JIT tiers, -Xint, GC, prep phase, FS order) and how the two worlds differ
(only the eventual-cluster assumption ledger: the 10-world records 22 extra
statement-family edges that end up undischarged) — is in
docs/eventual-info-hierarchy.md §"The bistability investigation".

Hardening landed here, each closing a real order-sensitivity hole (fast suites green):

- ParameterizedTypeImpl.hashCode hashed the WildcardEnum CONSTANT. Enum.hashCode() is
  the identity hash and FINAL, so every wildcard-bearing type — and, through the
  recursive parameters hash, every type containing one — had a hash that varies per
  JVM run, scattering the iteration order of every hash-keyed collection of types.
  Replaced with a stable per-constant token. Measured: not sufficient alone to kill
  the bistability, but exactly the disease this hashCode's own comment ("keep their
  iteration order") tried to prevent, and the same disease WitnessIndex documents
  having fixed once before (LocalVariableImpl identity hash).
- MethodLinkedVariablesImpl.modified and LinkNatureImpl.pass: callers hand in
  Set.of/Set.copyOf, whose iteration order is per-JVM salted; both now normalize to a
  canonical FQN-sorted set in the constructor.
- VariableDataImpl.Builder.knownVariableNames(): Set.copyOf discarded the creation
  order its LinkedHashMap exists to provide; snapshot in creation order instead.
- LinkedVariablesImpl.merge: accumulate in a HashMap (Variable keys are FQN-hashed,
  iteration identical across runs) instead of re-wrapping in salted Map.copyOf. An
  FQN-sorted canonical cons